hphp/test/quick/final_method3.php.expectf

Fatal error: Cannot override final method Foo::foo() in %s on line 10
